# vex

./: .gitignore  CHANGELOG.md  LICENSE.md  ORIGINS.md  README.md  config.yaml.example  dogfood.sh  project_documentation.md  pyproject.toml  release-please-config.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  tests.yml
docs/: README.md  commands.md  configuration.md  enrichment.md  getting-started.md  output-formats.md  pipeline.md
tests/: _ollama_transport.py  test_abuseipdb.py  test_ai_providers.py  test_ai_providers_characterization.py  test_async_client.py  test_batch.py  test_cache.py  test_client.py  test_config.py  test_correlate.py  test_correlation_explain.py  test_dedup.py  test_defang.py  test_doctor.py  test_enricher_robustness.py  test_enrichers.py  test_explanation_degraded_banner.py  test_filename_not_domain.py  test_html.py  test_injection_detector.py  test_injection_shared_source.py  test_ioc_detector.py  test_ioc_detector_property.py  test_knowledge_db.py  test_llm_failure_posture.py  test_misp.py  test_models_explanation_fields.py  test_ndjson.py  test_opencti.py  test_output_render_safety.py  test_pe_info_machine_type.py  test_plugin_dispatch.py  test_quota_integration.py  test_quota_tracker.py  test_scheduling.py  test_secondary_parallel.py  test_shodan.py  test_sift_bridge.py  test_stix_opencti.py  test_system_prompt_defense.py  (+5 more)
tooling/: ruff-base.toml
vex/: __init__.py  __main__.py  addons.py  async_client.py  banner.py  batch.py  cache.py  client.py  config.py  correlate.py  defang.py  doctor.py  ioc_detector.py  main.py  models.py  quota_tracker.py  scheduling.py  timeline.py  tlp.py  version_check.py  watchlist_runner.py
vex/ai/: __init__.py  anthropic.py  cache.py  injection_detector.py  ollama.py  openai.py  prompt.py  protocol.py  template.py
vex/enrichers/: __init__.py  base.py  domain.py  hash.py  ip.py  protocol.py  url.py  whois_enricher.py
vex/knowledge/: __init__.py  api.py  db.py
vex/mitre/: __init__.py  mapper.py  mapping.py
vex/output/: __init__.py  export.py  formatter.py  html.py  navigator.py  stix.py
vex/pipeline/: __init__.py  barb_bridge.py  sift_bridge.py
vex/plugins/: __init__.py  abuseipdb.py  loader.py  misp.py  opencti.py  registry.py  shodan.py  virustotal.py
